--- a/ino/make/Makefile.deps.jinja
+++ b/ino/make/Makefile.deps.jinja
@@ -20,7 +20,7 @@
 	{# prepend build path to a target in the generated file and 
 	   add .d file itself as a target so that changes in a header file would rebuild dependency files
 	   See: http://make.paulandlesley.org/autodep.html #}
-	@echo -n "{{ target.path }} {{ target.path|dirname }}{{ slash }}" | cat - $@ > $@~ && mv $@~ $@
+	@printf "{{ target.path }} {{ target.path|dirname }}{{ slash }}" | cat - $@ > $@~ && mv $@~ $@
 {% endfor %}
 
 {#
