Overhauled handling of compiler flags
Previously all compiler flags (cxxflags etc) were hardcoded into `ino',
which is inflexible since, for instance, it is not even possible to
define constants (via `-D') on the command-line at compile time.  This
commit adds the `--cppflags', `--cflags', `--cxxflags' and `--ldflags'
command-line options in order to improve this situation.

In summary, all are documented under `ino build --help'; defaults are
preserved as before; and the user is not able to void any flags (e.g.
include paths for the required libraries) which are essential for the
building of a sketch

--- a/ino/make/Makefile.jinja
+++ b/ino/make/Makefile.jinja
@@ -15,11 +15,11 @@ include {{ target.path|depsname }}
 {% endmacro %}
 
 {% macro compile_c(filemap) %}
-{{ compile(filemap, e.cc ~ ' ' ~ e.cflags) }}
+{{ compile(filemap, e.cc ~ ' ' ~ e.cppflags ~ ' ' ~ e.cflags) }}
 {% endmacro %}
 
 {% macro compile_cpp(filemap) %}
-{{ compile(filemap, e.cxx ~ ' ' ~ e.cflags ~ ' ' ~ e.cxxflags) }}
+{{ compile(filemap, e.cxx ~ ' ' ~ e.cppflags ~ ' ' ~ e.cxxflags) }}
 {% endmacro %}
 
 {#
@@ -56,7 +56,7 @@ include {{ target.path|depsname }}
 {% set elf = e.build_dir|pjoin('firmware.elf') %}
 {{ elf }} : {{ objs }}
 	@echo {{ 'Linking firmware.elf'|colorize('green') }}
-	{{v}}{{ e.cc }} {{ e.elfflags }} -o $@ $^ -lm
+	{{v}}{{ e.cc }} {{ e.ldflags }} -o $@ $^ -lm
 
 {#
  #   elf -> hex
