Fixed hanging when no .cpp files bug
Fixed bug that caused `ino' to hang when scanning for dependencies of
libraries with only .h files (i.e. no .ino, .c or .cpp files).

--- a/ino/make/Makefile.deps.jinja
+++ b/ino/make/Makefile.deps.jinja
@@ -29,7 +29,7 @@
 {{ output_filepath }} : {{ cpp.target_paths() }}
 	@echo {{ ('Scanning dependencies of ' ~ src_dir|basename)|colorize('cyan') }}
 	@mkdir -p {{ output_filepath|dirname }}
-	{{v}}cat $^ > $@;
+	{{v}}{{ 'cat $^ >' if cpp.target_paths() else 'touch' }} $@;
 
 all : {{ output_filepath }}
 	@true
